2006-03-09  Keltus <keltus@users.sourceforge.net>
	* README: Minor update

2005-12-24  Keltus <keltus@users.sourceforge.net>
	* Released version 0.4.6.

	* irclib.py (VERSION):
	* python-irclib.spec.in:
	Preparations for version 0.4.6.

2005-12-23  Keltus <keltus@users.sourceforge.net>
	* dccsend:
	* dccreceive:
	* irclib.py:
	* ircbot.py:
	* irccat:
	* irccat2:
	* servermap:
	* testbot.py:
	Code modernization - String methods used instead of deprecated
	string functions, keyword 'in' used for membership testing instead
	of 'has_key' method, etc.

2005-12-06  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.process_data): Reversed fix from
	2005-05-28. This is strange because there was a bug before and
	now it's gone. Either python changed something, or the IRC
	networks changed something. Confirmed by peter.

2005-11-03  Keltus <keltus@users.sourceforge.net>
	* irclib.py (numeric_events): Renamed numeric code 332 from topic
	to currenttopic (the message when "/topic <chan>" is sent), so it
	doesn't collide with TOPIC (the message when the topic is set).

2005-08-27  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.disconnect): Fixed infinitely
	recursive calls when disconnecting with a failed connection. Bug
	reported by Erik Max Francis.

2005-08-18  Keltus <keltus@users.sourceforge.net>
	* irclib.py: Made ServerConnection.disconnect more consistant and
	changed some functions to use it instead of quit. Previously,
	disconnect would ignore the quit message, but now it sends a quit
	message and disconnect. Suggestion by Erik Max Francis.
	* ircbot.py: Changed to use ServerConnection.disconnect instead of
	ServerConnection.quit as well.

2005-05-28  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.process_data): Fixed quit arguments
	to return a list rather than a list of a list. Patch from peter.

2005-05-18  Keltus <keltus@users.sourceforge.net>
	* Released version 0.4.5.
