@@ -18,7 +18,7 @@ here:
 
 Requirements:
 
-  * Python 1.6 or newer.
+  * Python 2.2 or newer.
 
 Installation:
 
